Home page h1 tag is updated again and again for devops3

--- a/assignment/src/main/resources/templates/home/index.html
+++ b/assignment/src/main/resources/templates/home/index.html
@@ -7,7 +7,7 @@
 <body>
 
     <div>
-        <h1>HELLO FROM UPDATED HOME PAGE</h1>
+        <h1>HELLO FROM UPDATED 2 HOME PAGE</h1>
     </div>
 
 </body>
